springbootHazelcast/kube/hazelcast/networkPolicy2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-5701-5703-hz
spec:
  podSelector:
    matchLabels:
      role: hazelcast
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: hazelcast
      ports:
        - protocol: TCP
          port: 5701
        - protocol: TCP
          port: 5702
        - protocol: TCP
          port: 5703
