springbootHazelcast/kube/hazelcast/networkPolicy3.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-5701-5703-app
spec:
  podSelector:
    matchLabels:
      role: hazelcast
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: app
      ports:
        - protocol: TCP
          port: 5701
        - protocol: TCP
          port: 5702
        - protocol: TCP
          port: 5703
